syntax = "proto3";
package crossme;

option go_package = "crossme.app/src/pb";

message Fill {
    bool complete = 2;

    // Lamport timestamp for this structure
    int64 clock = 3;

    enum Flags {
        NONE = 0;
        CHECKED_RIGHT = 1;
        CHECKED_WRONG = 2;
        PENCIL = 4;

        DID_CHECK = 8;
        DID_REVEAL = 16;
    }

    message Cell {
        uint32 index = 1;
        int64 clock = 2;
        uint32 owner = 3;

        string fill = 4;
        uint32 flags = 5;
    }

    // List of all node IDs represented in this fill.
    //
    // Node IDs are long, so we deduplicate on the wire by sending
    // int32 references into this array in the `owner` field.
    repeated string nodes = 4;

    // This list must be stored in order by `index`
    repeated Cell cells = 5;
}
